--- a/book/src/main/resources-filtered/META-INF/resources/core/servlet/changelog.jspx
+++ b/book/src/main/resources-filtered/META-INF/resources/core/servlet/changelog.jspx
@@ -37,7 +37,7 @@ along with semanticcms-core-servlet.  If not, see <http://www.gnu.org/licenses /
 		shortTitle="Changelog"
 		tocLevels="1"
 		datePublished="2016-10-30T18:16:13-0500"
-		dateModified="2020-03-06T19:57:35-0600"
+		dateModified="2020-03-06T20:04:32-0600"
 	>
 		<!-- The current snapshot, unreleased version -->
 		<c:set var="version" value="@{com.semanticcms:semanticcms-core-servlet:pom.version}" />
@@ -70,6 +70,11 @@ along with semanticcms-core-servlet.  If not, see <http://www.gnu.org/licenses /
 					<li>
 						<ao:a href="apidocs/com/semanticcms/core/servlet/impl/PageImpl.html">PageImpl</ao:a> now establishes
 						a page context for <ao:a href="https://aoindustries.com/ao-web-resources/">AO Web Resources</ao:a>.
+					</li>
+					<li>
+						Now configures <ao:a href="https://aoindustries.com/ao-web-resources/">AO Web Resources</ao:a>
+						for <ao:a href="apidocs/com/semanticcms/core/servlet/Theme.html">Theme</ao:a>
+						and <ao:a href="apidocs/com/semanticcms/core/servlet/View.html">View</ao:a>.
 					</li>
 				</ul>
 			</changelog:release>
