--- a/book/src/main/resources-filtered/META-INF/resources/core/servlet/changelog.jspx
+++ b/book/src/main/resources-filtered/META-INF/resources/core/servlet/changelog.jspx
@@ -37,7 +37,7 @@ along with semanticcms-core-servlet.  If not, see <http://www.gnu.org/licenses /
 		shortTitle="Changelog"
 		tocLevels="1"
 		datePublished="2016-10-30T18:16:13-0500"
-		dateModified="2020-03-06T20:04:32-0600"
+		dateModified="2020-03-07T06:01:29-0600"
 	>
 		<!-- The current snapshot, unreleased version -->
 		<c:set var="version" value="@{com.semanticcms:semanticcms-core-servlet:pom.version}" />
@@ -49,12 +49,16 @@ along with semanticcms-core-servlet.  If not, see <http://www.gnu.org/licenses /
 			<changelog:release
 				projectName="@{documented.name}"
 				version="#{version}"
-				groupId="@{documented.groupId}"
+				groupId="@{project.groupId}"
 				artifactId="@{documented.artifactId}"
-				scmUrl="@{documented.scm.url}"
+				scmUrl="@{project.scm.url}"
 			>
 				<ul>
 					<li>Minimum Java version changed from 1.7 to 1.8.</li>
+					<li>
+						Reduced use of property substitutions in <code>pom.xml</code>.
+						This is to help 3rd-party parsers that fail to perform full Maven-compatible substitutions.
+					</li>
 					<li>Now supports page attributes for <code>serialization</code> (default "auto") and <code>doctype</code> (default "HTML5").</li>
 					<li>Setting more values during captures:
 						<ol>
@@ -84,9 +88,9 @@ along with semanticcms-core-servlet.  If not, see <http://www.gnu.org/licenses /
 			projectName="@{documented.name}"
 			version="1.14.0"
 			datePublished="2019-10-11T17:18:51-0500"
-			groupId="@{documented.groupId}"
+			groupId="@{project.groupId}"
 			artifactId="@{documented.artifactId}"
-			scmUrl="@{documented.scm.url}"
+			scmUrl="@{project.scm.url}"
 		>
 			<ul>
 				<li>Element IDs may now contain the full range of <ao:a href="https://www.w3.org/TR/REC-xml/#id">valid XML identifiers</ao:a>.</li>
@@ -110,9 +114,9 @@ along with semanticcms-core-servlet.  If not, see <http://www.gnu.org/licenses /
 			projectName="@{documented.name}"
 			version="1.13.0"
 			datePublished="2019-06-19T09:19:35-0500"
-			groupId="@{documented.groupId}"
+			groupId="@{project.groupId}"
 			artifactId="@{documented.artifactId}"
-			scmUrl="@{documented.scm.url}"
+			scmUrl="@{project.scm.url}"
 		>
 			<ul>
 				<li>Using managed dependencies:
@@ -129,9 +133,9 @@ along with semanticcms-core-servlet.  If not, see <http://www.gnu.org/licenses /
 			projectName="@{documented.name}"
 			version="1.12.0"
 			datePublished="2019-04-19T05:37:16-0500"
-			groupId="@{documented.groupId}"
+			groupId="@{project.groupId}"
 			artifactId="@{documented.artifactId}"
-			scmUrl="@{documented.scm.url}"
+			scmUrl="@{project.scm.url}"
 		>
 			<ul>
 				<li>Minimum Java version changed from 1.6 to 1.7.</li>
@@ -147,9 +151,9 @@ along with semanticcms-core-servlet.  If not, see <http://www.gnu.org/licenses /
 			projectName="@{documented.name}"
 			version="1.11.0"
 			datePublished="2017-07-19T22:41:51-0500"
-			groupId="@{documented.groupId}"
+			groupId="@{project.groupId}"
 			artifactId="@{documented.artifactId}"
-			scmUrl="@{documented.scm.url}"
+			scmUrl="@{project.scm.url}"
 		>
 			<ul>
 				<li>New release for bug fixes in underlying <ao:a href="https://aoindustries.com/ao-encoding/">AO Encoding</ao:a> library.</li>
@@ -163,9 +167,9 @@ along with semanticcms-core-servlet.  If not, see <http://www.gnu.org/licenses /
 			projectName="@{documented.name}"
 			version="1.10.0"
 			datePublished="2016-11-15T17:45:15-0600"
-			groupId="@{documented.groupId}"
+			groupId="@{project.groupId}"
 			artifactId="@{documented.artifactId}"
-			scmUrl="@{documented.scm.url}"
+			scmUrl="@{project.scm.url}"
 		>
 			<ul>
 				<li>New <ao:a href="https://aoindustries.com/ao-oss-parent/">AO OSS Parent</ao:a> POM to simplify <code>pom.xml</code> files.</li>
@@ -183,9 +187,9 @@ along with semanticcms-core-servlet.  If not, see <http://www.gnu.org/licenses /
 			projectName="@{documented.name}"
 			version="1.9.0"
 			datePublished="2016-10-20T18:20:00-0500"
-			groupId="@{documented.groupId}"
+			groupId="@{project.groupId}"
 			artifactId="@{documented.artifactId}"
-			scmUrl="@{documented.scm.url}"
+			scmUrl="@{project.scm.url}"
 		>
 			<ul>
 				<li>Improved Javadoc formatting.</li>
@@ -210,9 +214,9 @@ along with semanticcms-core-servlet.  If not, see <http://www.gnu.org/licenses /
 			projectName="@{documented.name}"
 			version="1.8.1"
 			datePublished="2016-10-10T19:37:00-0500"
-			groupId="@{documented.groupId}"
+			groupId="@{project.groupId}"
 			artifactId="@{documented.artifactId}"
-			scmUrl="@{documented.scm.url}"
+			scmUrl="@{project.scm.url}"
 		>
 			<ul>
 				<li>display-name defined in web-fragment.xml was causing "The display name was defined in multiple fragments with different value"</li>
@@ -224,9 +228,9 @@ along with semanticcms-core-servlet.  If not, see <http://www.gnu.org/licenses /
 			projectName="@{documented.name}"
 			version="1.8.0"
 			datePublished="2016-10-04T20:39:00-0500"
-			groupId="@{documented.groupId}"
+			groupId="@{project.groupId}"
 			artifactId="@{documented.artifactId}"
-			scmUrl="@{documented.scm.url}"
+			scmUrl="@{project.scm.url}"
 		>
 			<ul>
 				<li>Improved Javadoc formatting.</li>
@@ -266,9 +270,9 @@ along with semanticcms-core-servlet.  If not, see <http://www.gnu.org/licenses /
 			projectName="@{documented.name}"
 			version="1.7"
 			datePublished="2016-09-11T15:34:00-0500"
-			groupId="@{documented.groupId}"
+			groupId="@{project.groupId}"
 			artifactId="@{documented.artifactId}"
-			scmUrl="@{documented.scm.url}"
+			scmUrl="@{project.scm.url}"
 		>
 			<ul>
 				<li>Use dependencyManagement instead of dependency for junit.</li>
@@ -283,9 +287,9 @@ along with semanticcms-core-servlet.  If not, see <http://www.gnu.org/licenses /
 			projectName="@{documented.name}"
 			version="1.6"
 			datePublished="2016-09-03T21:48:00-0500"
-			groupId="@{documented.groupId}"
+			groupId="@{project.groupId}"
 			artifactId="@{documented.artifactId}"
-			scmUrl="@{documented.scm.url}"
+			scmUrl="@{project.scm.url}"
 		>
 			<ul>
 				<li>Improved Maven configuration for Java EE 6 dependencies.</li>
@@ -296,9 +300,9 @@ along with semanticcms-core-servlet.  If not, see <http://www.gnu.org/licenses /
 			projectName="@{documented.name}"
 			version="1.5"
 			datePublished="2016-08-28T20:33:00-0500"
-			groupId="@{documented.groupId}"
+			groupId="@{project.groupId}"
 			artifactId="@{documented.artifactId}"
-			scmUrl="@{documented.scm.url}"
+			scmUrl="@{project.scm.url}"
 		>
 			<ul>
 				<li>Making use of web-fragment.xml to remove common configuration from per-app web.xml.</li>
@@ -315,9 +319,9 @@ along with semanticcms-core-servlet.  If not, see <http://www.gnu.org/licenses /
 			projectName="@{documented.name}"
 			version="1.4"
 			datePublished="2016-08-21T16:57:00-0500"
-			groupId="@{documented.groupId}"
+			groupId="@{project.groupId}"
 			artifactId="@{documented.artifactId}"
-			scmUrl="@{documented.scm.url}"
+			scmUrl="@{project.scm.url}"
 		>
 			<ul>
 				<li>Moved styles to separate package.</li>
@@ -332,9 +336,9 @@ along with semanticcms-core-servlet.  If not, see <http://www.gnu.org/licenses /
 			projectName="@{documented.name}"
 			version="1.3"
 			datePublished="2016-08-19T14:39:00-0500"
-			groupId="@{documented.groupId}"
+			groupId="@{project.groupId}"
 			artifactId="@{documented.artifactId}"
-			scmUrl="@{documented.scm.url}"
+			scmUrl="@{project.scm.url}"
 		>
 			<ul>
 				<li>Now generating missing ids when first accesssed, not at the end of
@@ -365,9 +369,9 @@ along with semanticcms-core-servlet.  If not, see <http://www.gnu.org/licenses /
 			projectName="@{documented.name}"
 			version="1.2"
 			datePublished="2016-08-09T22:22:00-0500"
-			groupId="@{documented.groupId}"
+			groupId="@{project.groupId}"
 			artifactId="@{documented.artifactId}"
-			scmUrl="@{documented.scm.url}"
+			scmUrl="@{project.scm.url}"
 		>
 			<ul>
 				<li>Renamed project from ao-web-page-servlet to semanticcms-core-servlet.</li>
@@ -380,7 +384,7 @@ along with semanticcms-core-servlet.  If not, see <http://www.gnu.org/licenses /
 			datePublished="2016-08-07T23:39:00-0500"
 			groupId="com.aoindustries"
 			artifactId="ao-web-page-servlet"
-			scmUrl="@{documented.scm.url}"
+			scmUrl="@{project.scm.url}"
 		>
 			<ul>
 				<li>Reverted to Java 1.6 for Android and Java EE 6 compatibility.</li>
@@ -393,7 +397,7 @@ along with semanticcms-core-servlet.  If not, see <http://www.gnu.org/licenses /
 			datePublished="2016-08-07T10:49:00-0500"
 			groupId="com.aoindustries"
 			artifactId="ao-web-page-servlet"
-			scmUrl="@{documented.scm.url}"
+			scmUrl="@{project.scm.url}"
 		>
 			<ul>
 				<li>Project moved to GitHub and Maven.</li>
