--- a/book/src/main/resources-filtered/META-INF/resources/core/servlet/changelog.jspx
+++ b/book/src/main/resources-filtered/META-INF/resources/core/servlet/changelog.jspx
@@ -121,7 +121,7 @@ along with semanticcms-core-servlet.  If not, see <http://www.gnu.org/licenses /
 				<li>
 					<code><ao:a href="apidocs/com/semanticcms/core/servlet/PageRefResolver.html">PageRefResolver</ao:a>.getCurrentPageRef(…)</code>
 					now accepts an optional parameter to optionally return <code>null</code> on missing book instead of throwing
-					<code><ao:a rel="nofollow" href="@{javac.link.javaeeApi.6}javax/servlet/ServletException.html">ServletException</ao:a></code>.
+					<code><ao:a rel="nofollow" href="@{javadoc.link.javaee}javax/servlet/ServletException.html">ServletException</ao:a></code>.
 				</li>
 			</ul>
 		</changelog:release>
