--- a/book/src/main/resources-filtered/META-INF/resources/core/servlet/changelog.jspx
+++ b/book/src/main/resources-filtered/META-INF/resources/core/servlet/changelog.jspx
@@ -37,7 +37,7 @@ along with semanticcms-core-servlet.  If not, see <http://www.gnu.org/licenses /
 		shortTitle="Changelog"
 		tocLevels="1"
 		datePublished="2016-10-30T18:16:13-0500"
-		dateModified="2020-03-07T06:01:29-0600"
+		dateModified="2020-03-15T00:27:10-05:00"
 	>
 		<!-- The current snapshot, unreleased version -->
 		<c:set var="version" value="@{com.semanticcms:semanticcms-core-servlet:pom.version}" />
@@ -80,6 +80,7 @@ along with semanticcms-core-servlet.  If not, see <http://www.gnu.org/licenses /
 						for <ao:a href="apidocs/com/semanticcms/core/servlet/Theme.html">Theme</ao:a>
 						and <ao:a href="apidocs/com/semanticcms/core/servlet/View.html">View</ao:a>.
 					</li>
+					<li>Updated dependencies.</li>
 				</ul>
 			</changelog:release>
 		</c:if>
