--- a/book/src/main/resources-filtered/META-INF/resources/core/servlet/changelog.jspx
+++ b/book/src/main/resources-filtered/META-INF/resources/core/servlet/changelog.jspx
@@ -37,7 +37,7 @@ along with semanticcms-core-servlet.  If not, see <http://www.gnu.org/licenses /
 		shortTitle="Changelog"
 		tocLevels="1"
 		datePublished="2016-10-30T18:16:13-0500"
-		dateModified="2020-12-03T07:12:04-06:00"
+		dateModified="2020-12-08T06:31:56-06:00"
 	>
 		<c:if test="${fn:endsWith('@{project.version}', '-SNAPSHOT') and !fn:endsWith('@{project.version}', '-POST-SNAPSHOT')}">
 			<changelog:release
@@ -52,13 +52,25 @@ along with semanticcms-core-servlet.  If not, see <http://www.gnu.org/licenses /
 						New module <core:link book="/core/controller" page="/" /> split from <code:link page="/" />, leaving
 						<code:link page="/" /> only to generate page content from servlets.
 					</li>
-					<li>
-						Split development-only classes into a new sub-project in <code>devel/</code>.  This
-						sub-project is used development only and is never deployed to artifact repositories.
-					</li>
 				</ul>
 			</changelog:release>
 		</c:if>
+
+		<changelog:release
+			projectName="@{documented.name}"
+			version="1.17.0"
+			datePublished="2020-12-08T06:31:56-06:00"
+			groupId="@{project.groupId}"
+			artifactId="@{documented.artifactId}"
+			scmUrl="@{project.scm.url}"
+		>
+			<ul>
+				<li>
+					Split development-only classes into a new sub-project in <code>devel/</code>.  This
+					sub-project is used development only and is never deployed to artifact repositories.
+				</li>
+			</ul>
+		</changelog:release>
 
 		<changelog:release
 			projectName="@{documented.name}"
