--- a/book/src/main/resources-filtered/META-INF/resources/core/servlet/changelog.jspx
+++ b/book/src/main/resources-filtered/META-INF/resources/core/servlet/changelog.jspx
@@ -37,7 +37,7 @@ along with semanticcms-core-servlet.  If not, see <http://www.gnu.org/licenses /
 		shortTitle="Changelog"
 		tocLevels="1"
 		datePublished="2016-10-30T18:16:13-0500"
-		dateModified="2020-12-08T06:31:56-06:00"
+		dateModified="2020-12-15T11:40:17-06:00"
 	>
 		<c:if test="${fn:endsWith('@{project.version}', '-SNAPSHOT') and !fn:endsWith('@{project.version}', '-POST-SNAPSHOT')}">
 			<changelog:release
@@ -60,7 +60,7 @@ along with semanticcms-core-servlet.  If not, see <http://www.gnu.org/licenses /
 			<ul>
 				<li>
 					Split development-only classes into a new sub-project in <code>devel/</code>.  This
-					sub-project is used development only and is never deployed to artifact repositories.
+					sub-project is used development for only and is never deployed to artifact repositories.
 				</li>
 			</ul>
 		</changelog:release>
